gitops/infra/auth/oauth2-cookie/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-cookie
  namespace: oauth2-cookie
  labels:
    app: oauth2-cookie
spec:
  selector:
    matchLabels:
      app: oauth2-cookie
  replicas: 1
  template:
    metadata:
      labels:
        app: oauth2-cookie
    spec:
      containers:
      - image: ghcr.io/konstfish/oauth2-cookie:0.1.0
        imagePullPolicy: Always
        name: oauth2-cookie
        resources:
          requests:
            cpu: "50m"
            memory: "250Mi"
          limits:
            cpu: "100m"
            memory: "250Mi"
