gitops/infra/auth/oauth2-cookie/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oauth2-cookie
spec:
  selector:
    app: oauth2-cookie
  type: ClusterIP
  ports:
  - name: http
    port: 8080
